dubbo升级，ip地址和mysql密码加入环境变量中